<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Desgaguejador</string>
    <string name="aviso">Aviso</string>
    <string name="iniciar">Iniciar</string>
    <string name="botao_parar">Parar</string>
    <string name="frequencia">Frequência</string>
    <string name="delay">Atraso</string>
    <string name="ok">OK</string>
    <string name="confirmacao">Confirmação</string>
    <string name="nao">Não</string>
    <string name="preferencias">Configurar Modos</string>
    <string name="opcao_menu_preferencias">Modos</string>
    <string name="opcao_menu_sobre">Sobre</string>
    <string name="textView_app">Aplicativo de Auxílio ao Tratamento de Pessoas com Gagueira</string>
    <string name="sim">Sim</string>
    <string name="sim_">Sim</string>
    <string name="deseja_realmente_apagar">Deseja realmente apagar?</string>
    <string name="menu_apagar">Apagar</string>
    <string name="menu_abrir">Abrir</string>
    <string name="nome_vazio">Nome do modo está vazio!</string>
    <string name="menu_item_alterar">Alterar</string>
    <string name="nome_do_modo">Digite o nome do modo:</string>
    <string name="criar_modo">Criar novo modo</string>
    <string name="salvar_modo">Salvar</string>
    <string name="cancelar_modo">Cancelar</string>
    <string name="falha_modo">Falha ao salvar modo.</string>
    <string name="salvo_sucesso_modo">Novo modo salvo com sucesso.</string>
    <string name="salvo_falha_modo">Modo não foi salvo.</string>
    <string name="texto_botao_iniciar_gravacao">Iniciar</string>
    <string name="texto_botao_parar_gravacao">Parar</string>
    <string name="texto_add_modo">Adicione um novo modo</string>
    <string name="texto_modos">Modos:</string>
    <string name="permicao_concedida">Permissão concedida</string>
    <string name="permicao_nao_concedida">Permissão não concedida</string>
    <string name="txt_desenvolvedores">Equipe de desenvolvimento</string>
    <string name="txt_jeff">Jefferson de França Filho - Bacharelado em Engenharia de Software - Universidade Tecnológica Federal do Paraná - UTFPR - Gerente do projeto e desenvolvedor.</string>
    <string name="txt_fabricio">Fabrício Martins Lopes - Doutor em Bioinformática (2011) pela Universidade de São Paulo - Professor na Universidade Tecnológica Federal do Paraná - UTFPR - Orientador do projeto.</string>
    <string name="txt_joao">João Gabriel Salgado - Bacharelado em Engenharia de Software - Universidade Tecnológica Federal do Paraná - UTFPR - Colaborador voluntário.</string>
    <string name="txt_jose">Jose Ede Campos Neto - Bacharelado em Engenharia de Software - Universidade Tecnológica Federal do Paraná - UTFPR - Colaborador voluntário. .</string>
    <string name="txt_sobre_protagonismo_estudantil">XD</string>
    <string name="txt_protagonismo_estudantil">Programa Protagonismo Estudantil</string>
    <string name="txt_sobre_protagonismo_est">Tem como objetivo selecionar candidatos para bolsas de Protagonismo Estudantil, apoiadas com recursos da UTFPR, através da submissão de um projeto atinente à qualidade da vida acadêmica dos estudantes focando o ingresso, permanência e inserção na sociedade.
        \n\nO projeto Aplicativo de Auxílio ao Tratamento de Pessoas com Gagueira, foi apresentado e submetido ao EDITAL 013/2017 PROTAGONISMO ESTUDANTIL para o campus Cornélio Procópio, aprovado no segundo semestre de 2017.</string>
    <string name="txt_iniciar">Iniciar</string>
    <string name="txt_parar">Parar</string>
    <string name="txt_alterar_modo">Alterar Modo</string>
    <string name="txt_nome_modo">Nome do Modo:</string>
    <string name="btn_salvar_alteracao">Salvar alterações</string>
    <string name="msg_inicial_bem_vindo">Bem vindo ao Desgaguejador!</string>
    <string name="msg_inicial_configs">Você pode configurar o atraso e a frequência de acordo com suas preferências!</string>
    <string name="msg_inicial_modo">Você pode adicionar um modo salvando as preferências de atraso e frequência que definir nos seekbars acima!</string>
    <string name="msg_inicial_sobre">Para mais informações, acesse a aba "Sobre".</string>
    <string name="msg_fone_de_ouvido">Bem vindo ao Desgaguejador, um Aplicativo de Auxílio ao Tratamento de Pessoas com Gagueira.
                                    \n\nVocê pode simular o efeito coro, de acordo com as configurações de atraso e frequência que melhor se adaptarem ao seo perfil.
                                    \n\nPara o correto funcionamento da reprodução de áudio, utilize um fone de ouvido!</string>
    <string name="msg_selecione_prefs">Para iniciar a reprodução corretamente, selecione as opções de atraso e frequência acima! Ou um modo!</string>
    <string name="msg_para_aplicar_atraso_reinicie">Para aplicar as novas preferências de ATRASO reinicie a reprodução!</string>
    <string name="modo_inicial_spinner">Modo Inicial</string>
    <string name="tela_sobre_desgaguejador_nome">Desgaguejador</string>
    <string name="descricao_desgaguejador">O Desgaguejador é um aplicativo para dispositivos móveis com sistema operacional Android, tendo como função principal a retroalimentação auditiva atrasada (RAA), ou seja, um aplicativo que consegue reproduzir a voz do usuário simultaneamente com um pequeno atraso configurável, num tom diferente também configurável.

                                                \n\nFREQUÊNCIA
                                                \nFrequência - é a tonalidade em que sua voz será reproduzida:
                                                \n-Tonalidade de voz Grave utilize entre 0.5 e 09.
                                                \n-Tonalidade de voz Aguda utilize entre 1.1 e 2.0.
                                                \n-Tonalidede de voz Normal utilize 1.0.

                                                \n\nATRASO
                                                \nAtraso - é a diferença de tempo entre sua fala, e a audição do que foi dito:
                                                \n-Mínimo: 0.25 segundos (250 Ms).
                                                \n-Máximo: 3 segundos (3000 Ms).

                                                \n\nMODO
                                                \nVocê pode adicionar um modo setando as preferências de atraso e frequência.

                                                \n\nDÚVIDAS
                                                \nDúvidas e sugestões entre em contato pelo e-mail: jff_94@hotmail.com

    </string>
    <string-array name="itens_spiner">
        <item>Nenhum modo selecionado</item>
    </string-array>
</resources>
